[ macOS ] 3 webaudio/OfflineAudioContext/ layout-tests are flakey text failures https://bugs.webkit.org/show_bug.cgi?id=224387 <rdar://problem/76468058>

Reviewed by Eric Carlson.

Source/WebCore:

Replace internals.numberOfBaseAudioContexts() test infrastructure with
internals.baseAudioContextIdentifier() & internals.isBaseAudioContextAlive().
This allows tests to check if specific BaseAudioContext instances created by the
tests are actually alive. As a result, the tests are no longer impacted by tests
running before them (and potentially leaking, see Bug 224399) or in parallel to
them in the same process.

This is the same approach we used for leak testing Documents (internals.documentIdentifier()
& internals.isDocumentAlive()).

* Modules/webaudio/BaseAudioContext.cpp:
(WebCore::generateAudioContextID):
(WebCore::liveAudioContexts):
(WebCore::BaseAudioContext::BaseAudioContext):
(WebCore::BaseAudioContext::~BaseAudioContext):
(WebCore::BaseAudioContext::isContextAlive):
* Modules/webaudio/BaseAudioContext.h:
(WebCore::BaseAudioContext::contextID const):
* testing/Internals.cpp:
(WebCore::Internals::countMatchesForText):
(WebCore::Internals::baseAudioContextIdentifier):
(WebCore::Internals::isBaseAudioContextAlive):
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

Update OfflineAudioContext leak tests to use the new test infrastructure. They are no longer impacted
by tests running before them or in parallel to them.

* webaudio/OfflineAudioContext/offlineaudiocontext-leak-after-rendering-expected.txt:
* webaudio/OfflineAudioContext/offlineaudiocontext-leak-after-rendering.html:
* webaudio/OfflineAudioContext/offlineaudiocontext-leak-expected.txt:
* webaudio/OfflineAudioContext/offlineaudiocontext-leak-while-suspended-expected.txt:
* webaudio/OfflineAudioContext/offlineaudiocontext-leak-while-suspended.html:
* webaudio/OfflineAudioContext/offlineaudiocontext-leak.html:
* webaudio/resources/audiocontext-leak-test.js: Added.
(didGCAtLeastOneContext):
(gcAndCheckForContextLeaks):


Canonical link: https://commits.webkit.org/236369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275798 268f45cc-cd09-0410-ab3c-d52691b4dbfc